tests/fixtures/errors/interp_union.z
Shape: union {
    dot: null
    box: i64
}

main: function is {
    s: Shape.box 3
    print "s=\{s} end"
}
